# gpig-c

./: .gitignore  CMakeLists.txt  README.md  build.xml
CMakeModules/: GPIGC.cmake  UseLATEX.cmake
Core/: .classpath
DataEmitter/: .classpath  .gitignore  .project  build.xml
DataEmitter/res/: systemdata.proto
GPIG/: .classpath  .project  build.xml
GPIG-WebApp/: .classpath  .gitignore  .project
GPIG-WebApp/war/: GPIG_WebApp.html  datastore-indexes.xml
Proto/: .classpath  build.xml
PrototypeAdminCentre/modern-business/: about.html  clients.html  contact.html  contact.php  guide.html  index.html  login.html  pricing.html  services.html  signup1.html  template.html
PrototypeAdminCentre/web/: contact.html  guide.html  login.html  pricing.html  services.html
TestAppEmitter/: .project
docs/: .CMakeLists.txt.swp  CMakeCache.txt  CMakeLists.txt
docs/initial-report/: CMakeLists.txt  admin-roles.tex  const-req-table.tex  design-dec-table.tex  func-req-table.tex  initial-report.blg  initial-report.tex  makelatex  nfunc-req-table.tex  pert-chart.tex  pert-table.tex  report-refs.bib  risk-register.tex  riskass-table.tex  risklevel-table.tex  tech-roles.tex  wc.tex  wordCount
docs/manual/: .gitignore  CMakeLists.txt  manual.out  manual.tex
docs/second-report/: 01-introduction.tex  02-glossary.tex  03-requirements.tex  04-architecture.tex  05-prototype.tex  06-team.tex  07-riskregister.tex  08-communication.tex  (+17 more)
projects/: .gitignore
tools/: common-ant.xml  launch-eq.sh  launch-ta.sh  launch.sh  run-linux.sh  run-osx.sh  run.bat  run.sh  wordcount.sh
(+481 files in other folders)
